Minor Change [FENIX-156]: [Coordinator Analytic Tools]: Fixed some layout issues when listing the courses.

--- a/web/CSS/gwt/xviews/executionYear.css
+++ b/web/CSS/gwt/xviews/executionYear.css
@@ -170,3 +170,27 @@ Not being used
 	margin-top: 40px;
 	margin-bottom: 10px;
 }
+
+.ExecutionYear-CourseListCellMiddle {
+	width: 300px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.ExecutionYear-CourseListCellTop {
+	width: 300px;
+	padding-top: 45px;
+	padding-bottom: 5px;
+}
+
+.ExecutionYear-CourseListCellBottom {
+	width: 300px;
+	padding-top: 5px;
+	padding-bottom: 45px;
+}
+
+.ExecutionYear-CourseListCellSingle {
+	width: 300px;
+	padding-top: 45px;
+	padding-bottom: 45px;
+}
